fix(select): if item is too long, display with error

--- a/styles/Select.scss
+++ b/styles/Select.scss
@@ -236,6 +236,7 @@
       .n-select-menu__item {
         position: relative;
         padding: 0px 14px;
+        white-space: nowrap;
         &.n-select-menu__item--selected {
           color: #63E2B7FF;
         }
